# lunapark

./: .emmyrc.json  .luacheckrc  CITATION.cff  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TROPHIES.md  conv.patch  fuzzer.patch  shell.nix
.clusterfuzzlite/: Dockerfile  build.sh  compile_lua_fuzzer  project.yaml
.github/actions/setup-emmylua-analyzer/: action.yml
.github/workflows/: cflite_batch.yml  cflite_build.yml  cflite_cron.yml  cflite_pr.yml  check.yaml  oss-fuzz.yml  proofs.yaml  test.yaml
cmake/: BuildLua.cmake  BuildLuaJIT.cmake  BuildLuzer.cmake  CodeCoverage.cmake  LibFuzzer.cmake  ProtobufMutator.cmake
libluamut/: CMakeLists.txt  crossover.c  mutate.c
patches/: puc-rio-lua.patch
proofs/cbmc/: CMakeLists.txt  README.md  luaL_makeseed.c
tests/: CMakeLists.txt
tests/capi/: CMakeLists.txt  luaL_addgsub_test.cc  luaL_buffaddr_test.c  luaL_bufflen_test.c  luaL_buffsub_test.cc  luaL_dostring_test.c  luaL_gsub_test.cc  luaL_loadbuffer_test.c  luaL_loadbufferx_test.c  luaL_loadstring_test.c  luaL_traceback_test.c  lua_dump_test.c  lua_load_test.cc  lua_stringtonumber_test.c  torture_test.cc
tests/capi/ffi_cdef_proto/: cdef.proto  cdef_print.cc  cdef_print.h  ffi_cdef_proto_test.cc
tests/capi/luaL_loadbuffer_proto/: luaL_loadbuffer_proto_test.cc  lua_grammar.proto  preamble.lua  serializer.cc  serializer.h
tests/lapi/: CMakeLists.txt  bitop_arshift_test.lua  bitop_band_test.lua  bitop_bnot_test.lua  bitop_bor_test.lua  bitop_bswap_test.lua  bitop_bxor_test.lua  bitop_lshift_test.lua  bitop_rol_test.lua  bitop_ror_test.lua  bitop_rshift_test.lua  bitop_tobit_test.lua  bitop_tohex_test.lua  builtin_assert_test.lua  builtin_collectgarbage_test.lua  builtin_concat_test.lua  builtin_dofile_test.lua  builtin_dostring_test.lua  builtin_error_test.lua  builtin_getfenv_test.lua  builtin_getmetatable_test.lua  builtin_ipairs_test.lua  builtin_length_test.lua  builtin_load_test.lua  builtin_loadfile_test.lua  builtin_loadstring_test.lua  builtin_next_test.lua  builtin_pairs_test.lua  builtin_rawequal_test.lua  builtin_rawget_test.lua  builtin_rawset_test.lua  builtin_select_test.lua  builtin_setmetatable_test.lua  builtin_tonumber_test.lua  builtin_tostring_test.lua  builtin_unpack_test.lua  coroutine_torture_test.lua  debug_torture_test.lua  io_torture_test.lua  jit_p_test.lua  (+63 more)
